@@ -211,24 +211,12 @@ class TestState {
 	std::cout << "\t" << outstate[PASSED] << s << std::endl;
       }
 
-    void pass (const char *c)
-      {
-	std::string s = c;
-	pass (s);
-      }
-
     void xpass (std::string s)
       {
 	xpassed++;
 	laststate = PASSED;
 	lastmsg = s;
 	std::cout << "\t" << outstate[XPASSED] << s << std::endl;
-      }
-
-    void xpass (const char *c)
-      {
-	std::string s = c;
-	xpass (s);
       }
 
     void fail (std::string s)
@@ -239,24 +227,12 @@ class TestState {
 	std::cout << "\t" << outstate[FAILED] << s << std::endl;
       }
 
-    void fail (const char *c)
-      {
-	std::string s = c;
-	fail (s);
-      }
-
     void xfail (std::string s)
       {
 	xfailed++;
 	laststate = XFAILED;
 	lastmsg = s;
 	std::cout << "\t" << outstate[XFAILED] << s << std::endl;
-      }
-
-    void xfail (const char *c)
-      {
-	std::string s = c;
-	xfail (s);
       }
 
     void untested (std::string s)
@@ -267,24 +243,12 @@ class TestState {
 	std::cout << "\t" << outstate[UNTESTED] << s << std::endl;
       }
 
-    void untested (const char *c)
-      {
-	std::string s = c;
-	untested (s);
-      }
-
     void unresolved (std::string s)
       {
 	unresolve++;
 	laststate = UNRESOLVED;
 	lastmsg = s;
 	std::cout << "\t" << outstate[UNRESOLVED] << s << std::endl;
-      }
-
-    void unresolved (const char *c)
-      {
-	std::string s = c;
-	unresolved (s);
       }
 
     void totals (void)
