@@ -1,5 +1,11 @@
 2018-12-03  Ben Elliston  <bje@gnu.org>
 
+	* dejagnu.h (TestState): Remove const char * variants of pass(),
+	xpass(), fail(), xfail(), untested(), unresolved() for C++. A
+	const char * will be implicitly converted to std::string.
+
+2018-12-03  Ben Elliston  <bje@gnu.org>
+
 	* doc/dejagnu.texi: Move 'Built-in Procedures' node up a level,
 	removing the 'Reference' node and chapter. Make all subsubsections
 	in this chapter unnumbered subheadings.
